--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2? family= Poppins:wght@100 & display=swap');
 *{
-    font-family: 'poppins';
+    font-family: 'Poppins', sans-serif ;
+    padding: 0%;
+    margin: 0;
 }
 :root{
     --cor1: #fff;
@@ -10,44 +13,58 @@
     --cor5: #233032;
     --cor6: #2f86d6;
 }
-.topo{
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-align-items: center;
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 6rem;
 }
-nav{
-    
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo h1 {
+    color: black;
+    font-size: 2.2em;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.nav-item {
+    margin: 0 15px;
+}
+
+.nav-link {
+    text-decoration: none;
+    font-size: 1.15rem;
+    color: black;
+    font-weight: 400;
+}
+
+.mobile-menu-icon {
     display: none;
 }
 
-nav a{
-    text-decoration: none;
-    padding: 10px;
-    color: #233032;
-    font-size: 1.3em;
-    }
-    #burguer{
-         
-    }
-
-.itens-topo{
-    width: 40%;
- position: relative;
+.mobile-menu {
+    display: none;
 }
-.tit-topo{
-    position: absolute;
-    top: 0px;
-    left: 140px;
-    font-size: 2.6em;
+.tit-principal{
+    display: flex;
+    flex-direction: column;
 }
-.p-topo{
-    position: absolute;
-    left: 140px;
-    top: 42px;
+.tit-principal p{
     font-weight: bold;
     color: var(--cor6);
-    font-size: 1.7em;
 }
 
 .banner{
