--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 .logo h1 {
     color: black;
     font-size: 2.2em;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.801);
 }
 
 .nav-list {
@@ -76,23 +77,65 @@
     align-items: center;
     flex-wrap: wrap;
 }
-.item-banner{
-    
+.item-banner{  
 padding: 50px;
+line-height: 25px;
+}
+.item-banner h2{
+    padding: 20px 0px;
 
+}
+.img-banner{
+    height: 350px;
+}
+
+.primeiro-anuncio{
+    background-color: var(--cor5);
+    color: var(--cor1);
+    padding: 20px;
+    text-align: center;
+}
+.primeiro-anuncio p{
+    margin-bottom: 13px;
+    text-align: justify;
+}
+.btn-preços{
+    background-color: var(--cor6);
+    color: var(--cor1);  
+    padding: 6px;
+    border-radius: 5px;
+    text-decoration: none;
+    box-shadow: 7px 6px 10px rgba(255, 255, 255, 0.932);
+}
+.info{
+    text-align: center;
+    padding: 10px;
+}
+.info strong{
+    color: var(--cor6);
+    font-weight: bold;
+}
+.itens-info{
+    box-shadow: 5px 5px 10px #2f85d6e1;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 18px;
+}
+.img-info{
+    height: 270px;
 }
 
 table{
     border-collapse: collapse; 
     box-shadow: 10px 10px 10px var(--cor6);
-    font-size: 1.7em;
+    font-size: 1.4em;
     border-radius: 5px;
     margin: auto;
     
 }
 th, td{
     border: 1px solid black;
-    padding: 25px;
+    padding: 20px;
     text-align: center;
     
 }
