--- a/style.css
+++ b/style.css
@@ -132,6 +132,12 @@ line-height: 25px;
     padding: 10px;
     margin-bottom: 18px;
 }
+.itens-info:hover{
+    transition: 0.4s;
+    background-color: rgba(128, 128, 128, 0.418);
+    box-shadow: 10px 10px 10px rgba(0, 0, 255, 0.705);
+    color: #2f86d6;
+}
 .img-info{
     height: 270px;
 }
@@ -164,3 +170,36 @@ tr:nth-child(even) {
     font-size: 1.3em;
 
  }
+
+ .primeiro-anuncio h3{
+    margin-bottom: 12px;
+ }
+
+ .rodape{
+    text-align: center;
+    padding: 18px;
+   
+    margin: auto;
+ }
+ .logo-rodape {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.p-rodape{
+    line-height: 35px;
+    font-weight: bold;
+    max-width: 800px;
+    margin: auto;
+}
+.rodape a{
+    text-decoration: none;
+    color: white;
+    background-color: #2f86d6;
+    padding: 10px;
+    border-radius: 8px 0px 8px 0px;
+}
+.rodape a:hover{
+    transition: 0.4s;
+    box-shadow: 6px 8px 10px blue;
+}
